feat: registrar monto cobrado al finalizar servicio
